# gr-tdigest

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUTURE_IMPROVEMENTS.md  Justfile  Makefile  PUBLISH.md  README.md  SECURITY.md  api_design.md  comparison_design.md  design.md  pyproject.toml  tdigest_design.md
.github/: REPO_SETTINGS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/rulesets/: master.json  tags_vstar.json
.github/workflows/: ci.yml  publish_to_pypi.yml  release_cargo.yml  release_maven.yml  release_pypi.yml
.history/tdigest_rs/: __init___20251028140353.py  __init___20251028140413.py
benches/: cdf_quantile.rs  cdf_quantile_bench.rs  codecs.rs  codecs_bench.rs  parser_bench.rs  tdigest.rs  tdigest_bench.rs  tdigest_core.rs
bindings/java/: build.gradle  gradlew  settings.gradle
bindings/java/src/gr/: SmokeMain.java  TestRun.java
bindings/java/src/gr/tdigest/: Natives.java  TDigest.java  TDigestNative.java
bindings/java/src/gr/tdigest_rs/: TDigest.java  TDigestNative.java
bindings/java/src/test/java/gr/: TDigestMergeIntoExistingTest.java  TDigestMergeTest.java  TDigestSerializationTest.java
bindings/python/: README.md  pyproject.toml
bindings/python/gr_tdigest/: __init__.py
bindings/python/tests/: test_api_polars.py  test_api_python.py  test_polars_api.py  test_py_api.py
compat/: gr_tdigest_vs_tdigest_rs.md
compat/tdigest-rs-strict-python/benchmarks/: run.py
compat/tdigest-rs-strict-python/tdigest_rs/: __init__.py
compat/tdigest-rs-upstream/: PROVENANCE.md
crates/testdata/: Cargo.toml
docs/: gr_tdigest_vs_tdigest_rs.md  legacy-failure-report.md  review-compat-suite.md
integration/api_coherence/: conftest.py  helpers_cli.py  helpers_java.py  test_api_coherence.py  test_capability_parity.py  test_contract_behavior.py  test_contract_probe_validation.py  test_serialization.py  test_test_nan_and_empty_semantics.py  test_wire_java_interop.py  test_wire_python_polars.py
polars_tdigest/: __init__.py
scripts/: apply_github_rulesets.sh  check_changelog_update.sh
src/: error.rs  expressions.rs  jni.rs  lib.rs  polars_expr.rs  py.rs  quality.rs  utils.rs
src-java/: TestRun.java
src-java/gr/tdigest_rs/: Natives.java  TDigest.java  TDigestNative.java
src/quality/: cdf_quality.rs  quality_base.rs  quantile_quality.rs
src/tdigest/: cdf.rs  centroids.rs  codecs.rs  compressor.rs  frontends.rs  merges.rs  mod.rs  precision.rs  quantile.rs  scale.rs  singleton_policy.rs  tdigest.rs  test_helpers.rs  wire.rs
tdigest-testdata/: Cargo.toml
tdigest-testdata/src/: lib.rs
tdigest_rs/: __init__.py
tests/: api_capability_parity.rs  cli_capabilities.rs  rust_api_capability_parity.rs  test_class_api.py  test_estimate_quantiles.py  test_plugin_api.py  test_polars_api.py  test_py_api.py  test_quantiles.py  test_smoke_tests.py
