[package]
name    = "tdigest-rs"
version = "2.0.0"
edition = "2021"

[lib]
name       = "tdigest_rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Turn on Python extension bits (PyO3 + numpy + pyo3-polars)
python = ["dep:pyo3", "dep:numpy", "dep:pyo3-polars"]
# Turn on JNI bits
java = ["dep:jni"]
# Bench toggle stays here for clarity (no deps)
bench_codecs = []

[dependencies]
tdigest-testdata = { path = "tdigest-testdata" }

polars       = { version = "0.51.0", default-features = false, features = ["dtype-struct", "dtype-array", "fmt"] }
polars-core  = "0.51.0"
polars-arrow = "0.51.0"
polars-plan  = "0.51.0"
polars-io    = { version = "0.51.0", features = ["json"] }

jni          = { version = "0.21", optional = true }
clap         = { version = "4.5", features = ["derive"] }

pyo3-polars  = { version = "0.24", features = ["derive"], optional = true }
pyo3         = { version = "0.25", features = ["extension-module", "abi3-py312"], optional = true }
numpy        = { version = "0.25.0", optional = true }

# --- Rust essentials ---
bincode        = "2.0.1"
ordered-float  = { version = "5.1.0", features = ["serde"] }
rand           = "0.9.2"
rayon          = "1.11"
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = "1.0.145"

# jemalloc on Linux only (safer TLS flag for some distros)
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
tdigest-testdata = { path = "tdigest-testdata" }
criterion     = "0.5"
bytesize      = "1"
libc          = "0.2"
ctor          = "0.2"
jemalloc-ctl  = "0.5"

[[bin]]
name = "tdigest-rs"
path = "src/bin/tdigest_cli.rs"

[[bench]]
name = "codecs"
harness = false

[[bench]]
name = "cdf_quantile"
harness = false

[[bench]]
name = "tdigest"
harness = false

[workspace]
members  = ["tdigest-testdata"]
resolver = "2"
