[package]
name    = "gr-tdigest"
version = "0.1.6"
edition = "2021"

[lib]
name       = "gr_tdigest"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = [
  "dep:pyo3",
  "dep:numpy",
  "pyo3/extension-module",
  "pyo3/abi3-py312",
  "dep:pyo3-polars",
]
java = ["dep:jni"]
bench_codecs = []

[dependencies]
polars       = { version = "0.51.0", default-features = false, features = ["dtype-struct", "dtype-array", "fmt"] }
polars-core  = "0.51.0"
polars-arrow = "0.51.0"
polars-plan  = "0.51.0"
polars-io    = { version = "0.51.0", features = ["json"] }

jni          = { version = "0.21", optional = true }
clap         = { version = "4.5", features = ["derive"] }

pyo3-polars  = { version = "0.24", features = ["derive"], optional = true }
pyo3         = { version = "0.25", features = ["extension-module", "abi3-py312"], optional = true }
numpy        = { version = "0.25.0", optional = true }

# --- Rust essentials ---
bincode = { version = "2.0.1", features = ["serde"] }
ordered-float  = { version = "5.1.0", features = ["serde"] }
rand           = "0.9.2"
rayon          = "1.11"
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = "1.0.145"

# jemalloc on Linux only (safer TLS flag for some distros)
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
testdata = { path = "crates/testdata" }
criterion     = "0.5"
bytesize      = "1"
libc          = "0.2"
ctor          = "0.2"
jemalloc-ctl  = "0.5"
anyhow        = "1.0"
assert_fs     = "1"
predicates    = "3"
assert_cmd    = "2"
tempfile      = "3"


[[bin]]
name = "tdigest"
path = "src/bin/tdigest_cli.rs"

[[bench]]
name = "codecs_bench"
harness = false

[[bench]]
name = "cdf_quantile_bench"
harness = false

[[bench]]
name = "tdigest_bench"
harness = false

[workspace]
members  = [".", "crates/testdata"]
resolver = "2"

[profile.release]
strip = false
