[build-system]
requires = ["maturin[patchelf,zig]>=1.9.5,<2.0"]
build-backend = "maturin"

# ------------------------------------------------------------
# Poetry metadata (authoritative for env/dev/publish commands)
# ------------------------------------------------------------
[tool.poetry]
name = "tdigest-rs"
description = "Rust TDigest with Python, Polars and JNI"
readme = "README.md"
version = "0.0.0"  # kept in lockstep with Cargo.toml via `make version_set`
license = "Apache-2.0"
authors = [
  "Ingolfur Edvardsson <ingo.edvardsson@gresearch.co.uk>",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

# ------------------------------------------------------------
# Runtime dependencies (minimal)
# ------------------------------------------------------------
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
polars = ">=1.34.0"

# ------------------------------------------------------------
# Dev-only dependencies (installed by `poetry install --with dev`)
# ------------------------------------------------------------
[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2"
ruff = ">=0.13.3"
pre-commit = ">=4.3.0"
maturin = { version = ">=1.9.5", extras = ["patchelf", "zig"] }
numpy = ">=2.3.3"

# ------------------------------------------------------------
# Maturin build settings
# ------------------------------------------------------------
[tool.maturin]
features = ["python"]  # if you’re gating Python features
bindings = "pyo3"
module-name = "tdigest_rs"                # must match [lib] name in Cargo
strip = true
manylinux = "2_28"                        # matches your Makefile wheel target
zig = true

# ------------------------------------------------------------
# Ruff (lint / format)
# ------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
  "target",
  "dist",
  "build",
  ".venv",
  ".maturin",
  ".pytest_cache",
  ".ruff_cache"
]

# Optional per-file ignores example (uncomment if useful)
# [tool.ruff.lint.per-file-ignores]
# "tdigest_rs/__init__.py" = ["F401"]

# ------------------------------------------------------------
# Pytest defaults
# ------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
