[build-system]
requires = ["maturin[patchelf,zig]>=1.9.5,<2.0"]
build-backend = "maturin"

[project]
name = "tdigest_rs"
dynamic = ["version"]
description = "Rust TDigest with Python, Polars and JNI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Ingolfur Edvardsson", email = "ingo.edvardsson@gresearch.co.uk" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

# Runtime dependencies
dependencies = [
  "polars>=1.34.0",
]

# Dev groups (PEP 735). uv understands these and can install with --group/--all-groups.
[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.3",
  "pre-commit>=4.3.0",
  "maturin[patchelf,zig]>=1.9.5",
  "numpy>=2.3.3",
  "mypy>=1.18.2",
]

# ------------------------------------------------------------
# Maturin build settings
# ------------------------------------------------------------
[tool.maturin]
features = ["python"]
bindings = "pyo3"
module-name = "tdigest_rs._tdigest_rs"
strip = true
manylinux = "2_28"
zig = true

# ------------------------------------------------------------
# Ruff
# ------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["target","dist","build",".venv",".maturin",".pytest_cache",".ruff_cache"]

# ------------------------------------------------------------
# Pytest
# ------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

# ------------------------------------------------------------
# Mypy
# ------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
exclude = "(^target/|^build/|^dist/|^\\.venv/|^out/)"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
